JSAPI-3667: Map and controls z-index fix, pointer cursor for intro button

--- a/styles/style.less
+++ b/styles/style.less
@@ -26,7 +26,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: -1;
+    z-index: 0;
     background: url('../img/samples/page.png') 0 0 repeat #e7e7de;
 
     &:after {
@@ -79,6 +79,7 @@
         text-align: center;
         font: normal 28px/34px SuisseCond, Arial, sans-serif;
         transition-duration: 0.3s;
+        cursor: pointer;
 
         &:before {
             position: absolute;
@@ -86,7 +87,7 @@
             right: 0;
             bottom: 0;
             left: 0;
-            z-index: -1;
+            z-index: 0;
             border-radius: 50%;
             background-color: rgb(57, 57, 57);
             background-color: rgba(57, 57, 57, 0.93);
